src/current/v22.2/alter-database.md
---
title: ALTER DATABASE
summary: Use the ALTER DATABASE statement to change an existing database.
toc: true
docs_area: reference.sql
---

The `ALTER DATABASE` [statement](sql-statements.html) applies a [schema change](online-schema-changes.html) to a database.

{{site.data.alerts.callout_info}}
{% include {{ page.version.version }}/misc/schema-change-view-job.md %}
{{site.data.alerts.end}}

## Required privileges

Refer to the respective [subcommands](#subcommands).

## Synopsis

<div>
{% remote_include https://raw.githubusercontent.com/cockroachdb/generated-diagrams/{{ page.release_info.crdb_branch_name }}/grammar_svg/alter_database.html %}
</div>

## Parameters

 Parameter | Description
-----------|-------------
`database_name` | The name of the database you want to change.

Additional parameters are documented for the respective [subcommands](#subcommands).

## Subcommands

Subcommand | Description
-----------|------------
[`ADD REGION`](#add-region) |  Add a region to a [multi-region database](multiregion-overview.html). ([Enterprise-only](enterprise-licensing.html).)
[`ADD SUPER REGION`](#add-super-region) | Add a super region made up of a set of [database regions](multiregion-overview.html#super-regions) such that data from [regional tables](regional-tables.html) will be stored in only those regions. ([Enterprise-only](enterprise-licensing.html).)
[`ALTER LOCALITY`](#alter-locality) | <span class="version-tag">New in v22.2:</span> Persistently modify the configuration generated by the standard [multi-region SQL abstractions](multiregion-overview.html) on a per-region basis. For advanced users who want to customize their multi-region setup using [Zone Config Extensions](zone-config-extensions.html), a persistent, composable alternative to low-level [zone configs](configure-replication-zones.html).
[`ALTER SUPER REGION`](#alter-super-region) | Alter an existing [super region](multiregion-overview.html#super-regions) to include a different set of regions. A super region is made up of a set of regions added with [`ADD REGION`](#add-region) such that data from [regional tables](regional-tables.html) will be stored in only those regions. ([Enterprise-only](enterprise-licensing.html).)
[`CONFIGURE ZONE`](#configure-zone) | [Configure replication zones](configure-replication-zones.html) for a database.
[`DROP REGION`](#drop-region) |  Drop a region from a [multi-region database](multiregion-overview.html). ([Enterprise-only](enterprise-licensing.html).)
[`DROP SECONDARY REGION`](#drop-secondary-region) | Drop a [secondary region](multiregion-overview.html#secondary-regions) from a [multi-region database](multiregion-overview.html). ([Enterprise-only](enterprise-licensing.html).)
[`DROP SUPER REGION`](#drop-super-region) | Drop a super region made up of a set of [database regions](multiregion-overview.html#super-regions). ([Enterprise-only](enterprise-licensing.html).)
[`OWNER TO`](#owner-to) |  Change the owner of a database.
[`PLACEMENT`](#placement) | Configure the replica placement policy for a [multi-region database](multiregion-overview.html).
[`RENAME TO`](#rename-to) | Change the name of a database.
[`RESET {session variable}`](#reset-session-variable) |  Reset the session variable values for the database to the system defaults. This syntax is identical to [`ALTER ROLE ALL IN DATABASE ... RESET {session variable}`](alter-role.html).
[`SET {session variable}`](#set-session-variable) |  Set the default session variable values for the database. This syntax is identical to [`ALTER ROLE ALL IN DATABASE ... SET {session variable}`](alter-role.html).
[`SET PRIMARY REGION`](#set-primary-region) |  Set the primary region of a [multi-region database](multiregion-overview.html). ([Enterprise-only](enterprise-licensing.html).)
[`SET SECONDARY REGION`](#set-secondary-region) |  Set the [secondary region of a multi-region database](multiregion-overview.html#secondary-regions) for failover purposes. ([Enterprise-only](enterprise-licensing.html).)
[`SURVIVE {ZONE,REGION} FAILURE`](#survive-zone-region-failure) |  Add a survival goal to a [multi-region database](multiregion-overview.html).

### `ADD REGION`

`ALTER DATABASE .. ADD REGION` adds a [region](multiregion-overview.html#database-regions) to a [multi-region database](multiregion-overview.html). While CockroachDB processes an index modification or changing a table to or from a [`REGIONAL BY ROW` table](multiregion-overview.html#regional-by-row-tables), attempting to drop a region from the database containing that `REGIONAL BY ROW` table will produce an error. Similarly, while this statement is running, all index modifications and locality changes on [`REGIONAL BY ROW`](multiregion-overview.html#regional-by-row-tables) tables will be blocked.

{% include enterprise-feature.md %}

{{site.data.alerts.callout_danger}}
In order to add a region with `ADD REGION`, you must first set a primary database region with [`SET PRIMARY REGION`](#set-primary-region), or at [database creation](create-database.html). For an example showing how to add a primary region with `ALTER DATABASE`, see [Set the primary region](#set-the-primary-region).
{{site.data.alerts.end}}

For examples, see [Manage regions](#manage-regions).

#### Required privileges

To add a region to a database, the user must have one of the following:

- Membership to the [`admin`](security-reference/authorization.html#admin-role) role for the cluster.
- Either [ownership](security-reference/authorization.html#object-ownership) or the [`CREATE` privilege](security-reference/authorization.html#supported-privileges) for the database and all [`REGIONAL BY ROW`](multiregion-overview.html#regional-by-row-tables) tables in the database.

#### Parameters

Parameter | Description |
----------|-------------|
`region_name`   | The [region](multiregion-overview.html#database-regions) being added to this database.  Allowed values include any region present in [`SHOW REGIONS FROM CLUSTER`](show-regions.html). |

For usage, see [Synopsis](#synopsis).

### `ADD SUPER REGION`

`ALTER DATABASE .. ADD SUPER REGION` adds a [super region](multiregion-overview.html#super-regions) to a [multi-region database](multiregion-overview.html).

{{site.data.alerts.callout_info}}
{% include feature-phases/preview.md %}
{{site.data.alerts.end}}

{% include enterprise-feature.md %}

{% include {{page.version.version}}/sql/super-region-considerations.md %}

For examples, see [Manage super regions](#manage-super-regions).

#### Required privileges

To add a super region to a database, the user must have one of the following:

- Membership to the [`admin`](security-reference/authorization.html#admin-role) role for the cluster.
- Either [ownership](security-reference/authorization.html#object-ownership) or the [`CREATE` privilege](security-reference/authorization.html#supported-privileges) for the database.

#### Parameters

Parameter | Description |
----------|-------------|
`region_name`          | The name of the [super region](multiregion-overview.html#super-regions) being added to this database.    |
`region_name_list`     | The super region consists of this set of [database regions](multiregion-overview.html#database-regions). |

For usage, see [Synopsis](#synopsis).

### `ALTER LOCALITY`

<span class="version-tag">New in v22.2:</span> `ALTER DATABASE .. ALTER LOCALITY` provides a customization tool for advanced users to persistently modify the configuration generated by the standard [multi-region SQL abstractions](multiregion-overview.html) on a per-region basis.

The feature this statement enables is also known as _Zone Config Extensions_. For more information about how it works, and the benefits over using the low-level [`CONFIGURE ZONE`](#configure-zone) statement, see [Zone Config Extensions](zone-config-extensions.html).

For examples, see [Use Zone Config Extensions](#use-zone-config-extensions).

#### Required privileges

The user must be a member of the [`admin`](security-reference/authorization.html#roles) or [owner](security-reference/authorization.html#object-ownership) roles, or have the [`CREATE` privilege](security-reference/authorization.html#supported-privileges) on the database.

#### Parameters

Parameter | Description |
----------|-------------|
`GLOBAL` | Apply the Zone Configuration Extension to [global tables](multiregion-overview.html#global-tables).
`REGIONAL` | Apply the Zone Configuration Extension to all [`REGIONAL BY TABLE`](multiregion-overview.html#regional-tables) and [`REGIONAL BY ROW`](multiregion-overview.html#regional-by-row-tables) tables.
`REGIONAL IN` | Apply the Zone Configuration Extension to all `REGIONAL BY TABLE IN {region}` tables and all `{region}` [partitions](partitioning.html) of `REGIONAL BY ROW` tables).
`variable` | The name of the [replication zone variable](configure-replication-zones.html#replication-zone-variables) to change for the [schema objects](schema-design-overview.html) in the specified [region](multiregion-overview.html#database-regions).
`value` | The value of the [replication zone variable](configure-replication-zones.html#replication-zone-variables) to change for the [schema objects](schema-design-overview.html) in the specified [region](multiregion-overview.html#database-regions).

For usage, see [Synopsis](#synopsis).

### `ALTER SUPER REGION`

`ALTER DATABASE .. ALTER SUPER REGION` alters an existing [super region](multiregion-overview.html#super-regions) of a [multi-region database](multiregion-overview.html).

{{site.data.alerts.callout_info}}
{% include feature-phases/preview.md %}
{{site.data.alerts.end}}

{% include enterprise-feature.md %}

{% include {{page.version.version}}/sql/super-region-considerations.md %}

For examples, see [Manage super regions](#manage-super-regions).

#### Required privileges

To alter a database's super region, the user must have one of the following:

- Membership to the [`admin`](security-reference/authorization.html#admin-role) role for the cluster.
- Either [ownership](security-reference/authorization.html#object-ownership) or the [`CREATE` privilege](security-reference/authorization.html#supported-privileges) for the database.

#### Parameters

Parameter | Description |
----------|-------------|
`region_name`          | The name of the [super region](multiregion-overview.html#super-regions) being altered.                               |
`region_name_list`     | The altered super region will consist of this set of [database regions](multiregion-overview.html#database-regions). |

For usage, see [Synopsis](#synopsis).

### `CONFIGURE ZONE`

`ALTER DATABASE ... CONFIGURE ZONE` is used to add, modify, reset, or remove replication zones for a database. To view details about existing replication zones, use [`SHOW ZONE CONFIGURATIONS`](show-zone-configurations.html). For more information about replication zones, see [Configure Replication Zones](configure-replication-zones.html).

{{site.data.alerts.callout_danger}}
If you directly change a database's zone configuration with `ALTER DATABASE ... CONFIGURE ZONE`, CockroachDB will block all [`ALTER DATABASE ... SET PRIMARY REGION`](#set-primary-region) statements on the database.
{{site.data.alerts.end}}

You can use *replication zones* to control the number and location of replicas for specific sets of data, both when replicas are first added and when they are rebalanced to maintain cluster equilibrium.

For examples, see [Configure replication zones](#configure-replication-zones).

#### Required privileges

The user must be a member of the [`admin` role](security-reference/authorization.html#admin-role) or have been granted [`CREATE`](security-reference/authorization.html#supported-privileges) or [`ZONECONFIG`](security-reference/authorization.html#supported-privileges) privileges. To configure [`system` objects](configure-replication-zones.html#for-system-data), the user must be a member of the `admin` role.

#### Parameters

Parameter | Description |
----------|-------------|
`variable` | The name of the [replication zone variable](configure-replication-zones.html#replication-zone-variables) to change.
`value` | The value of the [replication zone variable](configure-replication-zones.html#replication-zone-variables) to change.
`DISCARD` | Remove a replication zone.

For usage, see [Synopsis](#synopsis).

### `DROP REGION`

`ALTER DATABASE .. DROP REGION` drops a [region](multiregion-overview.html#database-regions) from a [multi-region database](multiregion-overview.html). While CockroachDB processes an index modification or changing a table to or from a [`REGIONAL BY ROW` table](multiregion-overview.html#regional-by-row-tables), attempting to drop a region from the database containing that `REGIONAL BY ROW` table will produce an error. Similarly, while this statement is running, all index modifications and locality changes on [`REGIONAL BY ROW`](multiregion-overview.html#regional-by-row-tables) tables will be blocked.

{% include enterprise-feature.md %}

You cannot drop a region from a multi-region database if:

- The region is [set as the primary region](#set-primary-region), unless it is the last remaining region.
- The region is [set as the secondary region](#set-secondary-region). To drop the region, you must first unset the secondary region using [`DROP SECONDARY REGION`](#drop-secondary-region).
- The database uses the [`REGION` survival goal](multiregion-overview.html#surviving-region-failures) and there are only three regions configured on the database.

For examples, see [Manage regions](#manage-regions).

#### Required privileges

To drop a region from a database, the user must have one of the following:

- Membership to the [`admin`](security-reference/authorization.html#roles) role for the cluster.
- Membership to the [owner](security-reference/authorization.html#object-ownership) role, or the [`CREATE` privilege](security-reference/authorization.html#supported-privileges), for the database and all [`REGIONAL BY ROW`](multiregion-overview.html#regional-by-row-tables) tables in the database.

#### Parameters

Parameter | Description |
----------|-------------|
| `region_name`   | The [region](multiregion-overview.html#database-regions) being dropped from this database. Allowed values include any region present in [`SHOW REGIONS FROM DATABASE database_name`](show-regions.html).<br>You can only drop the primary region from a multi-region database if it is the last remaining region. |

For usage, see [Synopsis](#synopsis).

### `DROP SECONDARY REGION`

<span class="version-tag">New in v22.2:</span> `ALTER DATABASE .. DROP SECONDARY REGION` unsets the [secondary region](multiregion-overview.html#secondary-regions) (if set) from a [multi-region database](multiregion-overview.html).

{% include enterprise-feature.md %}

The secondary region is used for failover purposes: if the [primary region](#set-primary-region) fails, the secondary region acts as the new primary region. For more information, see [Secondary regions](multiregion-overview.html#secondary-regions).

For examples, see [Manage regions](#manage-regions).

#### Required privileges

To unset a secondary region on a database, the user must have one of the following:

- Membership to the [`admin`](security-reference/authorization.html#roles) role for the cluster.
- Membership to the [owner](security-reference/authorization.html#object-ownership) role, or the [`CREATE` privilege](security-reference/authorization.html#supported-privileges) for the database.

### `DROP SUPER REGION`

`ALTER DATABASE .. DROP SUPER REGION` drops a [super region](multiregion-overview.html#super-regions) from a [multi-region database](multiregion-overview.html).

{{site.data.alerts.callout_info}}
{% include feature-phases/preview.md %}
{{site.data.alerts.end}}

{% include enterprise-feature.md %}

{% include {{page.version.version}}/sql/super-region-considerations.md %}

For examples, see [Manage super regions](#manage-super-regions).

#### Required privileges

To drop a super region from a database, the user must have one of the following:

- Membership to the [`admin`](security-reference/authorization.html#roles) role for the cluster.
- Either [ownership](security-reference/authorization.html#object-ownership) or the [`CREATE` privilege](security-reference/authorization.html#supported-privileges) for the database.

#### Parameters

Parameter | Description |
----------|-------------|
`region_name`          | The name of the [super region](multiregion-overview.html#super-regions) being dropped from this database. |

For usage, see [Synopsis](#synopsis).

### `OWNER TO`

`ALTER DATABASE ... OWNER TO` is used to change the owner of a database.

For examples, see [Change database owner](#change-database-owner).

#### Required privileges

To change the owner of a database, the user must be an `admin` user, or the current owner of the database and a member of the new owner [role](security-reference/authorization.html#roles). The user must also have the `CREATEDB` [privilege](security-reference/authorization.html#managing-privileges).

#### Parameters

Parameter | Description |
----------|-------------|
`role_spec` | The role to set as the owner of the database.

For usage, see [Synopsis](#synopsis).

### `PLACEMENT`

`ALTER DATABASE ... PLACEMENT` is used to set the replica placement policy (`DEFAULT` or `RESTRICTED`) for a [multi-region database](multiregion-overview.html)'s [regional tables](regional-tables.html). [Regional tables](regional-tables.html) are those with [`REGIONAL BY ROW`](multiregion-overview.html#regional-by-row-tables) or [`REGIONAL BY TABLE`](multiregion-overview.html#regional-tables) localities. 

`ALTER DATABASE ... PLACEMENT RESTRICTED` constrains the voting and non-voting replica placement for the database's tables to the [home regions](alter-table.html#crdb_region) associated with those tables. This is a way of opting out of [non-voting replicas](architecture/replication-layer.html#non-voting-replicas) for [regional tables](regional-tables.html) to accomplish one or more of the following goals:

- Implement a [data domiciling](data-domiciling.html) strategy.
- Reduce the amount of data stored on the cluster.
- Reduce the overhead of replicating data across a large number of regions (e.g., 10 or more) for databases with heavier write loads.

Note that `ALTER DATABASE ... PLACEMENT RESTRICTED` does not allow you to opt out of placing [non-voting replicas](architecture/replication-layer.html#non-voting-replicas) entirely. For example, [`GLOBAL` tables](global-tables.html) in the database will remain unaffected by this statement. `GLOBAL` tables are designed to have replicas placed across all available [cluster regions](multiregion-overview.html#cluster-regions) to ensure fast local reads.

For examples, see [Set replica placement policy](#set-replica-placement-policy).

#### Required privileges

To use this statement, the user must have one of the following:

- Membership to the [`admin`](security-reference/authorization.html#roles) role for the cluster.
- [Ownership](security-reference/authorization.html#object-ownership) or the [`CREATE` privilege](security-reference/authorization.html#supported-privileges) for the database and all tables in the database.

#### Parameters

Parameter | Description |
----------|-------------|
`DEFAULT` | Set the replica placement policy for [regional tables](regional-tables.html) to `DEFAULT`.
`RESTRICTED` | Set the replica placement policy for [regional tables](regional-tables.html) to `RESTRICTED`.

For usage, see [Synopsis](#synopsis).

The replica placement policies work as follows:

- `DEFAULT` (**Default**): <a name="parameters-default"></a> If the replica placement policy [is set to `DEFAULT`](#set-the-replica-placement-policy-to-default), CockroachDB will use its default replica placement settings, which mean that:
  - Data will be placed in as many regions as necessary to ensure your [database survival goals](multiregion-overview.html#survival-goals) are met.
  - You can get fast stale reads from all [database regions](multiregion-overview.html#database-regions).

- `RESTRICTED`: <a name="parameters-restricted"></a> If the replica placement policy [is set to `RESTRICTED`](#set-the-replica-placement-policy-to-restricted), CockroachDB will constrain replica placement to only those regions where the table has voting replicas (that is, replicas which participate in the [Raft quorum](architecture/replication-layer.html#raft)). In practice, this means that voting replicas for the table will be constrained to the table's [home region](multiregion-overview.html#table-localities). Specifically, for [`REGIONAL BY TABLE`](multiregion-overview.html#regional-tables) tables, it will only place replicas in the defined region (or the database's [primary region](#set-primary-region)); for [`REGIONAL BY ROW`](multiregion-overview.html#regional-by-row-tables) tables, it will only place replicas for each underlying [partition](partitioning.html) in the partition's specified region. Finally, note that:
    - Regional tables with this placement setting will no longer provide "fast stale reads" from other (non-home) regions, since fast stale reads rely on the presence of non-voting replicas.
    - The `RESTRICTED` replica placement policy is only available for databases with the [`ZONE` survival goal](multiregion-overview.html#surviving-zone-failures).
    - This setting does not affect how [`GLOBAL` tables](global-tables.html) work; they will still place replicas in all [database regions](multiregion-overview.html#database-regions).

### `RENAME TO`

`ALTER DATABASE ... RENAME TO` changes the name of a database.

{{site.data.alerts.callout_info}}
It is not possible to rename a database if the database is referenced by a [view](views.html). For more details, see [View Dependencies](views.html#view-dependencies).
{{site.data.alerts.end}}

For examples, see [Rename database](#rename-database).

#### Required privileges

To rename a database, the user must be a member of the `admin` role or must have the [`CREATEDB`](create-role.html#create-a-role-that-can-create-and-rename-databases) parameter set.

#### Parameters

Parameter | Description |
----------|-------------|
`database_new_name` | The [`name`](sql-grammar.html#name) you want to use for the database. The new name must be unique and follow these [identifier rules](keywords-and-identifiers.html#identifiers). You cannot rename a database if it is set as the [current database](sql-name-resolution.html#current-database) or if [`sql_safe_updates = true`](set-vars.html).

For usage, see [Synopsis](#synopsis).

### `RESET {session variable}`

`ALTER DATABASE ... RESET {session variable}` resets a [session variable](set-vars.html#supported-variables) for a database to its default value for the client session.

#### Required privileges

No [privileges](security-reference/authorization.html#managing-privileges) are required to reset a session setting.

#### Parameters

Parameter | Description |
----------|-------------|
`session_var` | The name of the [session variable](set-vars.html#supported-variables).

For usage, see [Synopsis](#synopsis).

#### Aliases

In CockroachDB, the following are aliases for `ALTER DATABASE ... RESET {session variable}`:

- [`ALTER ROLE ALL IN DATABASE ... RESET {session variable}`](alter-role.html)

### `SET {session variable}`

`ALTER DATABASE ... SET {session variable}` sets the default value of a [session variable](set-vars.html#supported-variables) for all future sessions on the database. This command does **not** alter the session setting of the current session.

By default, session variable values are set for the duration of the current session.

#### Required privileges

To set the `role` session variable, the current user must be a member of the `admin` role, or a member of the target role.

All other session variables do not require [privileges](security-reference/authorization.html#managing-privileges) to modify.

#### Parameters

Parameter | Description |
----------|-------------|
`variable`  | The name of [the session variable](set-vars.html#supported-variables) to set. The variable name is case-insensitive.
`value` | The value, or list of values, to assign to the session variable.

For usage, see [Synopsis](#synopsis).

#### Aliases

In CockroachDB, the following are aliases for `ALTER DATABASE ... SET {session variable}`:

- `ALTER ROLE ALL IN DATABASE ... SET {session variable}`

### `SET PRIMARY REGION`

`ALTER DATABASE .. SET PRIMARY REGION` sets the primary [region](multiregion-overview.html#database-regions) of a [multi-region database](multiregion-overview.html).

{% include enterprise-feature.md %}

{{site.data.alerts.callout_danger}}
If a database's [zone configuration](configure-replication-zones.html) has been directly set with an [`ALTER DATABASE ... CONFIGURE ZONE`](#configure-zone) statement, CockroachDB will block all `ALTER DATABASE ... SET PRIMARY REGION` statements on the database.

To remove existing, manually-configured zones from a database (and unblock `SET PRIMARY REGION` statements on the database), use an [`ALTER DATABASE ... CONFIGURE ZONE DISCARD`](#remove-a-replication-zone) statement.
{{site.data.alerts.end}}

<span class="version-tag">New in v22.2:</span> [Secondary regions](multiregion-overview.html#secondary-regions) allow you to define a [database region](multiregion-overview.html#database-regions) that will be used for failover in the event your primary region goes down. For more information, see [Secondary regions](multiregion-overview.html#secondary-regions).

For examples, see [Manage regions](#manage-regions).

#### Required privileges

To add a primary region to a database with no existing regions, the user must have one of the following:

- Membership to the [`admin`](security-reference/authorization.html#roles) role for the cluster.
- Membership to the [owner](security-reference/authorization.html#object-ownership) role, or the [`CREATE` privilege](security-reference/authorization.html#supported-privileges), for the database and all tables in the database.

To switch primary regions to a region that has already been added to a database, the user must have membership to the [owner](security-reference/authorization.html#object-ownership) role for the database, or have the [`CREATE` privilege](security-reference/authorization.html#supported-privileges) on the database.

#### Parameters

Parameter | Description |
----------|-------------|
`region_name`   | The region to set as the database's primary region.<br>Allowed values include any region present in [`SHOW REGIONS FROM CLUSTER`](show-regions.html). |

For usage, see [Synopsis](#synopsis).

### `SET SECONDARY REGION`

<span class="version-tag">New in v22.2:</span> `ALTER DATABASE .. SET SECONDARY REGION` adds a [secondary region](multiregion-overview.html#database-regions) to a [multi-region database](multiregion-overview.html) for failover purposes.

{% include enterprise-feature.md %}

If the [primary region](#set-primary-region) fails, the secondary region becomes the new primary region. For more information, see [Secondary regions](multiregion-overview.html#secondary-regions).

{{site.data.alerts.callout_danger}}
In order to add a secondary region with `ALTER DATABASE ... SET SECONDARY REGION`, you must first set a primary database region with [`SET PRIMARY REGION`](#set-primary-region), or when [creating the database](create-database.html). For an example showing how to add a secondary region with `ALTER DATABASE`, see [Set the secondary region](#set-the-secondary-region).
{{site.data.alerts.end}}

For examples, see [Manage regions](#manage-regions).

#### Required privileges

To add a secondary region to a database, the user must have one of the following:

- Membership to the [`admin`](security-reference/authorization.html#admin-role) role for the cluster.
- Either [ownership](security-reference/authorization.html#object-ownership) or the [`CREATE` privilege](security-reference/authorization.html#supported-privileges) for the database.

#### Parameters

Parameter | Description |
----------|-------------|
`region_name` | Usually, the [region](multiregion-overview.html#database-regions) being set as the secondary region for this database. E.g., `"ap-southeast-2"`. Allowed values include any (non-primary) region present in `SHOW REGIONS`. |

For usage, see [Synopsis](#synopsis).

### `SURVIVE {ZONE,REGION} FAILURE`

`ALTER DATABASE ... SURVIVE {ZONE,REGION} FAILURE` [statement](sql-statements.html) sets the [survival goal](multiregion-overview.html#survival-goals) for a [multi-region database](multiregion-overview.html).

For examples, see [Configure survival goals](#configure-survival-goals).

#### Required privileges

The user must be a member of the [`admin`](security-reference/authorization.html#roles) or [owner](security-reference/authorization.html#object-ownership) roles, or have the [`CREATE` privilege](security-reference/authorization.html#supported-privileges) on the database.

#### Parameters

Parameter | Description |
----------|-------------|
`ZONE` | Set the [survival goal](multiregion-overview.html#survival-goals) to zone failure.
`REGION` | Set the [survival goal](multiregion-overview.html#survival-goals) to region failure.

For usage, see [Synopsis](#synopsis).

## Examples

### Manage regions

{% include {{page.version.version}}/sql/multiregion-example-setup.md %}

#### Set the primary region

Suppose you want to make the database `movr` a multi-region database.

To add the first region to the database, or to set an already-added region as the primary region, use a [`SET PRIMARY REGION`](#set-primary-region) statement:

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr SET PRIMARY REGION "us-east1";
~~~

~~~
ALTER DATABASE PRIMARY REGION
~~~

Given a cluster with multiple regions, any databases in that cluster that have not yet had their primary regions set will have their replicas spread as broadly as possible for resiliency. When a primary region is added to one of these databases:

- All tables will be [`REGIONAL BY TABLE`](alter-table.html#regional-by-table) in the primary region by default.
- This means that all such tables will have all of their voting replicas and leaseholders moved to the primary region. This process is known as [rebalancing](architecture/replication-layer.html#leaseholder-rebalancing).

#### Add regions to a database

To add more regions to a database that already has at least one region:

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr ADD region "us-west1";
~~~

~~~
ALTER DATABASE ADD REGION
~~~

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr ADD region "europe-west1";
~~~

~~~
ALTER DATABASE ADD REGION
~~~

To view the regions associated with a multi-region database, use a [`SHOW REGIONS FROM DATABASE`](show-regions.html) statement:

{% include_cached copy-clipboard.html %}
~~~ sql
SHOW REGIONS FROM DATABASE movr;
~~~

~~~
  database |    region    | primary | secondary |  zones
-----------+--------------+---------+-----------+----------
  movr     | us-east1     |    t    |     f     | {b,c,d}
  movr     | europe-west1 |    f    |     f     | {b,c,d}
  movr     | us-west1     |    f    |     f     | {a,b,c}
(3 rows)
~~~

#### Set the secondary region

To set an existing [database region](multiregion-overview.html#database-regions) (that is not already the [primary region](#set-the-primary-region)) as the [secondary region](multiregion-overview.html#secondary-regions), use the following statement:

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr SET SECONDARY REGION "us-west1";
~~~

~~~
ALTER DATABASE SET SECONDARY REGION
~~~

Now, the `"us-west1"` region will act as the primary region if the original primary region fails.

#### Unset the secondary region

To unset an existing [database region](multiregion-overview.html#database-regions) as the [secondary region](multiregion-overview.html#secondary-regions) on a multi-region database, use the [`DROP SECONDARY REGION`](#drop-secondary-region) statement:

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr DROP SECONDARY REGION;
~~~

~~~
ALTER DATABASE DROP SECONDARY REGION
~~~

{{site.data.alerts.callout_info}}
This statement does not drop the region from the database. To drop a region, use [`DROP REGION`](#drop-a-region-from-a-database).
{{site.data.alerts.end}}

#### Change the existing primary region

To change the primary region to another region in the database, use a [`SET PRIMARY REGION`](#set-primary-region) statement.

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr SET PRIMARY REGION "europe-west1";
~~~

~~~
ALTER DATABASE PRIMARY REGION
~~~

You can only change an existing primary region to a region that has already been [added to the database](#add-regions-to-a-database). If you try to change the primary region to a region that is not already associated with a database, CockroachDB will return an error.

#### Drop a region from a database

To [drop a region](#drop-region) from a multi-region database, use a [`DROP REGION`](#drop-region) statement.

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr DROP REGION "us-east1";
~~~

~~~
ALTER DATABASE DROP REGION
~~~

You cannot drop a region from a multi-region database if:

- The region is [set as the primary region](#set-the-primary-region), unless it is the last remaining region.
- The region is [set as the secondary region](#set-the-secondary-region). To drop the region, you must first unset the secondary region using [`DROP SECONDARY REGION`](#unset-the-secondary-region).
- The database uses the [`REGION` survival goal](multiregion-overview.html#surviving-region-failures) and there are only three regions configured on the database.

### Manage super regions

{% include {{page.version.version}}/sql/multiregion-example-setup.md %}

##### Set up MovR database regions

{% include {{page.version.version}}/sql/multiregion-movr-add-regions.md %}

##### Set up MovR global tables

{% include {{page.version.version}}/sql/multiregion-movr-global.md %}

##### Set up MovR regional tables

{% include {{page.version.version}}/sql/multiregion-movr-regional-by-row.md %}

#### Enable super regions

{% include {{page.version.version}}/sql/enable-super-regions.md %}

#### Add a super region to a database

To add a super region to a multi-region database, use the `ALTER DATABASE ... ADD SUPER REGION` statement:

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr ADD SUPER REGION "usa" VALUES "us-east1", "us-west1";
~~~

~~~
ALTER DATABASE ADD SUPER REGION
~~~

#### Alter a super region

This example assumes you have already added a `"usa"` super region as shown in the example [Add a super region to a database](#add-a-super-region-to-a-database). If you wanted to [drop the region](#drop-region) `us-west1`, you would first need to remove it from the super region.

To remove a region from a super region, use the `ALTER DATABASE ... ALTER SUPER REGION` statement and list only the regions that should remain in the super region:

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr ALTER SUPER REGION "usa" VALUES "us-east1";
~~~

~~~
ALTER DATABASE ALTER SUPER REGION
~~~

To add a region to a super region, alter the super region as shown above to be a list of regions that includes the existing and the new regions.

#### Allow user to modify a primary region that is part of a super region

{% include {{page.version.version}}/sql/enable-super-region-primary-region-changes.md %}

#### Drop a super region from a database

To drop a super region from a multi-region database, use a [`DROP SUPER REGION`](#drop-super-region) statement:

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr DROP SUPER REGION "usa";
~~~

~~~
ALTER DATABASE DROP SUPER REGION
~~~

Note that you cannot [drop a region](#drop-region) that is part of a super region until you either [alter the super region](#alter-super-region) to remove it, or [drop the super region](#drop-super-region) altogether.

For example, using the super region that was added in [`ADD SUPER REGION`](#add-a-super-region-to-a-database):

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr DROP REGION "us-west1";
~~~

~~~
ERROR: region us-west1 is part of super region usa
SQLSTATE: 2BP01
HINT: you must first drop super region usa before you can drop the region us-west1
~~~

### Configure replication zones

{% include {{ page.version.version }}/sql/movr-statements-geo-partitioned-replicas.md %}

#### Create a replication zone for a database

{% include {{ page.version.version }}/zone-configs/create-a-replication-zone-for-a-database.md %}

#### Edit a replication zone

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr CONFIGURE ZONE USING range_min_bytes = 0, range_max_bytes = 90000, gc.ttlseconds = 89999, num_replicas = 4;
~~~

#### Remove a replication zone

{{site.data.alerts.callout_info}}
When you discard a zone configuration, the objects it was applied to will then inherit a configuration from an object "the next level up"; e.g., if the object whose configuration is being discarded is a table, it will use its parent database's configuration.

You cannot `DISCARD` any zone configurations on multi-region tables, indexes, or partitions if the [multi-region abstractions](migrate-to-multiregion-sql.html#replication-zone-patterns-and-multi-region-sql-abstractions) created the zone configuration.
{{site.data.alerts.end}}

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr CONFIGURE ZONE DISCARD;
~~~

### Use Zone Config Extensions

The following examples show:

- How to [override specific fields of a schema object's zone configs](#override-specific-fields-of-a-schema-objects-zone-configs).
- How something like the [Secondary regions](multiregion-overview.html#secondary-regions) multi-region abstraction could have been implemented using Zone Config Extensions. For this example, we will call it ["Failover regions"](#failover-regions).
- How to [reset a region's Zone Config Extensions](#reset-a-regions-zone-config-extensions).
- How to [discard a region's Zone Config Extensions](#discard-a-regions-zone-config-extensions).

{{site.data.alerts.callout_info}}
We strongly recommend using the multi-region abstractions over "rolling your own" using Zone Config Extensions. These examples are provided to show the flexibility of Zone Config Extensions.
{{site.data.alerts.end}}

#### Setup

The setup described in this section will be used in the examples below.

##### Start a cluster

Start a [`cockroach demo`](cockroach-demo.html) cluster as follows:

{% include_cached copy-clipboard.html %}
~~~ shell
cockroach demo --global --nodes=9
~~~

This gives us a (preloaded) [MovR](movr.html) database on a cluster with the following [regions](multiregion-overview.html#cluster-regions), which can be viewed with [`SHOW REGIONS`](show-regions.html):

{% include_cached copy-clipboard.html %}
~~~ sql
SHOW REGIONS;
~~~

~~~
     region    |  zones  | database_names | primary_region_of | secondary_region_of
---------------+---------+----------------+-------------------+----------------------
  europe-west1 | {b,c,d} | {}             | {}                | {}
  us-east1     | {b,c,d} | {}             | {}                | {}
  us-west1     | {a,b,c} | {}             | {}                | {}
(3 rows)
~~~

##### Make the database multi-region

Next, modify the database to use the [multi-region abstractions](multiregion-overview.html) as follows:

1. Set the primary region using [`SET PRIMARY REGION`](#set-primary-region).
1. Add the other two regions using [`ADD REGION`](#add-region).

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr SET PRIMARY REGION "us-east1";
~~~

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr ADD REGION "us-west1";
~~~

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr ADD REGION "europe-west1";
~~~

#### Override specific fields of a schema object's zone configs

In this example we will configure a multi-region [MovR](movr.html) database to update its [`lease_preferences`](configure-replication-zones.html#lease_preferences) field. 

Setting the [primary region](#set-primary-region) to `us-east1` [during the setup steps](#use-zone-config-extensions) added `us-east1` to `lease_preferences`.

{% include_cached copy-clipboard.html %}
~~~ sql
SHOW ZONE CONFIGURATION FROM DATABASE movr;
~~~

~~~
     target     |                                      raw_config_sql
----------------+-------------------------------------------------------------------------------------------
  DATABASE movr | ALTER DATABASE movr CONFIGURE ZONE USING
                |     range_min_bytes = 134217728,
                |     range_max_bytes = 536870912,
                |     gc.ttlseconds = 90000,
                |     num_replicas = 5,
                |     num_voters = 3,
                |     constraints = '{+region=europe-west1: 1, +region=us-east1: 1, +region=us-west1: 1}',
                |     voter_constraints = '[+region=us-east1]',
                |     lease_preferences = '[[+region=us-east1]]'
(1 row)
~~~

We will now use `ALTER DATABASE ... ALTER LOCALITY` to overwrite the `lease_preferences` field to add `us-west1` to the list of regions:

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr ALTER LOCALITY REGIONAL IN "us-east1" CONFIGURE ZONE USING lease_preferences = '[[+region=us-east1], [+region=us-west1]]';
~~~

To view the updated zone configs, enter the following statement:

{% include_cached copy-clipboard.html %}
~~~ sql
SHOW ZONE CONFIGURATION FROM DATABASE movr;
~~~

~~~
     target     |                                      raw_config_sql
----------------+-------------------------------------------------------------------------------------------
  DATABASE movr | ALTER DATABASE movr CONFIGURE ZONE USING
                |     range_min_bytes = 134217728,
                |     range_max_bytes = 536870912,
                |     gc.ttlseconds = 90000,
                |     num_replicas = 5,
                |     num_voters = 3,
                |     constraints = '{+region=europe-west1: 1, +region=us-east1: 1, +region=us-west1: 1}',
                |     voter_constraints = '[+region=us-east1]',
                |     lease_preferences = '[[+region=us-east1], [+region=us-west1]]'
(1 row)
~~~

The `lease_preferences` field is now updated to include `us-west1`.

To remove the changes made in this example, [reset the Zone Config Extensions](#reset-a-regions-zone-config-extensions).

#### Failover regions

In this example we will use Zone Config Extensions to configure a multi-region [MovR](movr.html) database so that if the [primary region](#set-primary-region) fails, enough [replicas](architecture/distribution-layer.html) will be found in another region (the "failover" region) to take over for the primary region. We will set the [locality scope for this configuration to be `REGIONAL IN`](#parameters), which covers all [`REGIONAL BY TABLE IN {region}` tables](alter-table.html#set-the-table-locality-to-regional-by-table) and all `{region}` [partitions](partitioning.html) of [`REGIONAL BY ROW` tables](alter-table.html#set-the-table-locality-to-regional-by-row).

{{site.data.alerts.callout_info}}
This functionality is already provided by the built-in [Secondary regions](multiregion-overview.html#secondary-regions) feature. It is used here to show the flexibility of Zone Config Extensions. We strongly recommend using the [built-in multi-region features](multiregion-overview.html) whenever possible.
{{site.data.alerts.end}}

1. Set the database to have a `REGION` survival goal using [`ALTER DATABASE ... SURVIVE REGION FAILURE`](alter-database.html#survive-zone-region-failure):

     {% include_cached copy-clipboard.html %}
     ~~~ sql
     ALTER DATABASE movr SURVIVE REGION FAILURE;
     ~~~

1. Apply the `REGIONAL BY ROW` locality to the `movr.rides` table using the following statement:

     {% include_cached copy-clipboard.html %}
     ~~~ sql
     ALTER TABLE rides ADD COLUMN region crdb_internal_region AS (
      CASE WHEN city = 'amsterdam' THEN 'europe-west1'
           WHEN city = 'paris' THEN 'europe-west1'
           WHEN city = 'rome' THEN 'europe-west1'
           WHEN city = 'new york' THEN 'us-east1'
           WHEN city = 'boston' THEN 'us-east1'
           WHEN city = 'washington dc' THEN 'us-east1'
           WHEN city = 'san francisco' THEN 'us-west1'
           WHEN city = 'seattle' THEN 'us-west1'
           WHEN city = 'los angeles' THEN 'us-west1'
      END
     ) STORED;
     ALTER TABLE rides ALTER COLUMN region SET NOT NULL;
     ALTER TABLE rides SET LOCALITY REGIONAL BY ROW AS "region";
     ~~~

1. View the [zone configs](configure-replication-zones.html) for the `movr.rides` table using [`SHOW ZONE CONFIGURATION`](show-zone-configurations.html):

     {% include_cached copy-clipboard.html %}
     ~~~ sql
     SHOW ZONE CONFIGURATION FROM TABLE movr.rides;
     ~~~

     ~~~
          target     |                                      raw_config_sql
     ----------------+-------------------------------------------------------------------------------------------
       DATABASE movr | ALTER DATABASE movr CONFIGURE ZONE USING
                     |     range_min_bytes = 134217728,
                     |     range_max_bytes = 536870912,
                     |     gc.ttlseconds = 90000,
                     |     num_replicas = 5,
                     |     num_voters = 5,
                     |     constraints = '{+region=europe-west1: 1, +region=us-east1: 1, +region=us-west1: 1}',
                     |     voter_constraints = '{+region=us-east1: 2}',
                     |     lease_preferences = '[[+region=us-east1]]'
     (1 row)
     ~~~

     Remember that [we configured `us-east1` to be our primary region during cluster setup](#use-zone-config-extensions). The output above confirms that `us-east1` is the primary region based on the values of the [`voter_constraints`](configure-replication-zones.html#voter_constraints) and [`lease_preferences`](configure-replication-zones.html#lease_preferences) keys.
 
1. Update the configuration to keep additional voting replicas and leaseholders in `us-west1`. We do this because we would like to configure `us-west1` to be the failover region for `us-east1`. The following SQL statement accomplishes this by configuring `us-east1` to keep additional voting replicas and leaseholders in `us-west1`. This means that if `us-east1` fails, it will fail over to `us-west1`.

     {% include_cached copy-clipboard.html %}
     ~~~ sql
     ALTER DATABASE movr ALTER LOCALITY REGIONAL IN "us-east1" CONFIGURE ZONE USING voter_constraints = '{+region=us-east1: 2, +region=us-west1: 2}', lease_preferences = '[[+region=us-east1], [+region=us-west1]]';
     ~~~

1. View the [zone configs](configure-replication-zones.html) for the `movr.rides` table using [`SHOW ZONE CONFIGURATION`](show-zone-configurations.html):

     {% include_cached copy-clipboard.html %}
     ~~~ sql
     SHOW ZONE CONFIGURATION FROM TABLE movr.rides;
     ~~~

     ~~~
          target     |                                      raw_config_sql
     ----------------+-------------------------------------------------------------------------------------------
       DATABASE movr | ALTER DATABASE movr CONFIGURE ZONE USING
                     |     range_min_bytes = 134217728,
                     |     range_max_bytes = 536870912,
                     |     gc.ttlseconds = 90000,
                     |     num_replicas = 5,
                     |     num_voters = 5,
                     |     constraints = '{+region=europe-west1: 1, +region=us-east1: 1, +region=us-west1: 1}',
                     |     voter_constraints = '{+region=us-east1: 2, +region=us-west1: 2}',
                     |     lease_preferences = '[[+region=us-east1], [+region=us-west1]]'
     (1 row)
     ~~~

     The following changes are shown:
        - There are now 2 voting replicas stored in `us-west1`.
        - There is now a preference that if leases cannot be placed in `us-east1`, they should be placed in `us-west1`.

     Both of these changes combine to ensure that if `us-east1` goes down, the cluster will still be able to operate until some mitigation is in place.

To remove the zone config changes made in this example, [reset the Zone Config Extensions](#reset-a-regions-zone-config-extensions).

#### Reset a region's Zone Config Extensions

To reset the Zone Config Extension configuration applied to a region to the default settings, enter the following statement:

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr ALTER LOCALITY CONFIGURE ZONE USING DEFAULT;
~~~

{{site.data.alerts.callout_info}}
This will not reset any configuration created by the [multi-region abstractions](multiregion-overview.html).
{{site.data.alerts.end}}

#### Discard a region's Zone Config Extensions

To discard the Zone Config Extension settings from a region, enter the following statement:

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr ALTER LOCALITY CONFIGURE ZONE DISCARD;
~~~

{{site.data.alerts.callout_info}}
When you discard a zone configuration, the objects it was applied to will then inherit a configuration from an object "the next level up"; e.g., if the object whose configuration is being discarded is a table, it will use its parent database's configuration.

However, this statement will not remove any configuration created by the [multi-region abstractions](multiregion-overview.html).
{{site.data.alerts.end}}

### Change database owner

{% include {{page.version.version}}/sql/movr-statements.md %}

#### Change a database's owner

Suppose that the current owner of the `movr` database is `root` and you want to change the owner to a new user named `max`.

{% include_cached copy-clipboard.html %}
~~~ sql
> ALTER DATABASE movr OWNER TO max;
~~~

To verify that the owner is now `max`, query the `pg_catalog.pg_database` and `pg_catalog.pg_roles` tables:

{% include_cached copy-clipboard.html %}
~~~ sql
> SELECT rolname FROM pg_catalog.pg_database d JOIN pg_catalog.pg_roles r ON d.datdba = r.oid WHERE datname = 'movr';
~~~

~~~
  rolname
-----------
  max
(1 row)
~~~

{{site.data.alerts.callout_info}}
If the user running the command is not an admin user, they must own the database and be a member of the new owning role. They must also have the `CREATEDB` [privilege](security-reference/authorization.html#managing-privileges).
{{site.data.alerts.end}}

### Set replica placement policy

#### Setup

To follow along with the examples below:

1. Start a [demo cluster](cockroach-demo.html) with the [`--global` flag](cockroach-demo.html#general) to simulate a multi-region cluster:

    {% include_cached copy-clipboard.html %}
    ~~~ shell
    cockroach demo --global --nodes 9
    ~~~

1. Set the demo cluster's [database regions](multiregion-overview.html#database-regions) and [table localities](multiregion-overview.html#table-locality) as described in [Low Latency Reads and Writes in a Multi-Region Cluster](demo-low-latency-multi-region-deployment.html) (specifically, starting at [Step 5. Execute multi-region SQL statements](demo-low-latency-multi-region-deployment.html#step-5-execute-multi-region-sql-statements)).

1. Enable the replica placement syntax with either the [session variable](set-vars.html) or the [cluster setting](cluster-settings.html) as shown below.

    1. To use the session variable:

        {% include_cached copy-clipboard.html %}
        ~~~ sql
        SET enable_multiregion_placement_policy = on;
        ~~~

    1. To use the cluster setting:

        {% include_cached copy-clipboard.html %}
        ~~~ sql
        SET CLUSTER SETTING sql.defaults.multiregion_placement_policy.enabled = on;
        ~~~

{% include {{page.version.version}}/sql/sql-defaults-cluster-settings-deprecation-notice.md %}

#### Create a database with the replica placement policy set to restricted

If you know at database creation time that you'd like to set the database's replica placement policy to ["restricted"](#parameters-restricted), you can do so in a [`CREATE DATABASE`](create-database.html) statement as shown below:

{% include_cached copy-clipboard.html %}
~~~ sql
CREATE DATABASE movr2 PRIMARY REGION "us-east1" REGIONS "us-west1", "europe-west1" PLACEMENT RESTRICTED;
~~~

~~~
CREATE DATABASE
~~~

#### Set the replica placement policy to `RESTRICTED`

When you set the database's placement policy to [`RESTRICTED`](#parameters-restricted), you are saying that you want the underlying data to be restricted to the table or partition's [home region](multiregion-overview.html#table-localities).

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr PLACEMENT RESTRICTED;
~~~

~~~
ALTER DATABASE PLACEMENT
~~~

#### Set the replica placement policy to `DEFAULT`

If previously you set the replica placement policy to [`RESTRICTED`](#set-the-replica-placement-policy-to-restricted), you can set it back to [the default](#parameters-default) by issuing the following statement:

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE movr PLACEMENT DEFAULT;
~~~

~~~
ALTER DATABASE PLACEMENT
~~~

### Rename database

#### Rename a database

{% include_cached copy-clipboard.html %}
~~~ sql
> CREATE DATABASE db1;
~~~

{% include_cached copy-clipboard.html %}
~~~ sql
> SHOW DATABASES;
~~~

~~~
  database_name
-----------------
  db1
  defaultdb
  movr
  postgres
  system
(5 rows)
~~~

{% include_cached copy-clipboard.html %}
~~~ sql
> ALTER DATABASE db1 RENAME TO db2;
~~~

{% include_cached copy-clipboard.html %}
~~~ sql
> SHOW DATABASES;
~~~

~~~
  database_name
-----------------
  db2
  defaultdb
  movr
  postgres
  system
(5 rows)
~~~

### Configure survival goals

#### Survive zone failures

To change the survival goal of a multi-region database to survive zone failures, use the following statement:

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE {db} SURVIVE ZONE FAILURE;
~~~

~~~
ALTER DATABASE SURVIVE
~~~

{{site.data.alerts.callout_info}}
Surviving zone failures is the default setting for multi-region databases.
{{site.data.alerts.end}}

For more information about the zone survival goal, see [Surviving zone failures](multiregion-overview.html#surviving-zone-failures).

#### Survive region failures

To change the survival goal of a multi-region database to survive region failures, use the following statement:

{% include_cached copy-clipboard.html %}
~~~ sql
ALTER DATABASE {db} SURVIVE REGION FAILURE;
~~~

~~~
ALTER DATABASE SURVIVE
~~~

If you try to change a database with less than 3 [database regions](multiregion-overview.html#database-regions) to survive region failures, the following error will be signalled:

~~~
ERROR: at least 3 regions are required for surviving a region failure
SQLSTATE: 42602
HINT: you must add additional regions to the database using ALTER DATABASE mr ADD REGION <region_name>
~~~

For more information about the region survival goal, see [Surviving region failures](multiregion-overview.html#surviving-region-failures).

## See also

- [Multi-Region Capabilities Overview](multiregion-overview.html)
- [Secondary regions](multiregion-overview.html#secondary-regions)
- [Super regions](multiregion-overview.html#super-regions)
- [Zone Config Extensions](zone-config-extensions.html)
- [Data Domiciling with CockroachDB](data-domiciling.html)
- [`CREATE DATABASE`](create-database.html)
- [`CREATE TABLE`](create-table.html)
- [`ALTER TABLE`](alter-table.html)
- [Online Schema Changes](online-schema-changes.html)
- [SQL Statements](sql-statements.html)